# fm-teleop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  fm-teleop.repos  install.sh  run.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/diagrams/: README.md  contract.d2  render.sh  styles.d2
fm_teleop/: CMakeLists.txt  README.md  package.xml
fm_teleop_core/: README.md  package.xml  setup.cfg  setup.py
fm_teleop_core/fm_teleop_core/: contract.py  retarget.py  source.py
fm_teleop_core/test/: test_contract.py  test_import.py  test_retarget.py  test_source.py
fm_teleop_device/: README.md  package.xml  setup.cfg  setup.py
fm_teleop_device/fm_teleop_device/: g1_hand_teleop.py  gripper_teleop.py  hand_presets.py  joy_to_servo.py  spacenav_to_servo.py
fm_teleop_device/test/: test_gripper_teleop.py  test_hand_presets.py  test_import.py
fm_teleop_leader/: README.md  package.xml  setup.cfg  setup.py
fm_teleop_leader/config/: sts3215_variant_thresholds.json
fm_teleop_leader/fm_teleop_leader/: leader_source.py
fm_teleop_leader/scripts/: classify-so101-leader-motor-variant.py  compare-so101-leader-motor-motion.py  configure-so101-leader-motors.py
fm_teleop_leader/test/: test_classify_so101_leader_motor_variant.py  test_import.py
fm_teleop_msgs/: CMakeLists.txt  package.xml
fm_teleop_msgs/msg/: HandQuality.msg  HandSkeleton.msg
fm_teleop_panel/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
fm_teleop_panel/src/: index.ts  joystick-math.test.ts  joystick-math.ts  joystick.tsx  jsp-reconcile.test.ts  jsp-reconcile.ts  jsp-seed.test.ts  jsp-seed.ts  jsp.tsx  keyboard.test.ts  keyboard.ts  merge.test.ts  merge.ts  panel.tsx  robotDescription.test.ts  robotDescription.ts  servoStatus.ts  so101.test.ts  so101.ts  urdf.test.ts  urdf.ts
fm_teleop_vision/: README.md  package.xml  setup.cfg  setup.py
fm_teleop_vision/fm_teleop_vision/: arm_reset.py  body_pose.py  capture.py  capture_browser.py  capture_stats.py  episode.py  export_episode.py  filters.py  hand.py  hand_tracker.py  mapping.py  mirror_datalogger.py  mirror_source.py  pose.py  vision_source.py
fm_teleop_vision/foxglove/: arm_3d.json  mirror_teleop.json
fm_teleop_vision/scripts/: analyze_mirror.py  capture_mirror.sh  download_model.sh  mirror_datalogger.py
fm_teleop_vision/test/: test_capture_stats.py  test_episode.py  test_filters.py  test_mapping.py  test_pose.py  test_vision_source.py
fm_teleop_vision/webgui/: index.html  viewer3d.js
fm_teleop_vr/: README.md  package.xml  setup.cfg  setup.py
fm_teleop_vr/fm_teleop_vr/: vr_source.py
fm_teleop_vr/test/: test_import.py
