<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fm_teleop_core</name>
  <version>0.0.0</version>
  <description>Teleop source layer: TeleopSource base node, command contract, and retarget utilities shared by every source</description>
  <maintainer email="nish@ubundi.co.za">First Motive</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <!-- The command contract is built from standard interfaces only (no fm_teleop_msgs). -->
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
